# kh-downloader

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs
src/: games.rs  main.rs  permissions.rs  ui.rs  uninstall.rs
src/epic/: auth.rs  install.rs  mod.rs
src/steam/: auth.rs  install.rs
ui/: appwindow.slint
