[package]
name = "kh-downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = "1.16.1"
tokio = { version = "1", features = ["full"] }
rfd = "0.17.2"
steamroom = "0.2.0"
steamroom-client = "0.2.0"
regex = "1.12.4"
prost = "0.14.4"
qrcode = "0.14.1"
zip = "8.6.0"
open = "5.3.5"
egs-api = "0.14.0"
reqwest = "0.13.4"
sha1 = "0.11.0"
fs4 = "1.1.0"

[build-dependencies]
slint-build = "1.16.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
